[tool.poetry]
name = "poetry"
version = "0.0.0"
description = "Reinforcement Learning"
authors = [
    "Laurent Thanwerdas <laurent.thanwerdas@gmail.com>",
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
torch = "^1.11.0"
universal-pathlib = "^0.0.18"
numpy = "^1.22.4"
black = "^22.3.0"
tqdm = "^4.64.0"
pandas = "^1.4.3"
tensorboard = "^2.9.1"
pytorch-lightning = "^1.6.4"
matplotlib = "^3.5.2"
